--- a/app/webroot/css/mystyle.css
+++ b/app/webroot/css/mystyle.css
@@ -1,28 +1,40 @@
+body{
+	background-color: #f5f5f5;
+}
+
 ul, li {
 	margin: 0px;
+}
+
+#header {
+	background-image: url(../img/header_background.png);
+	background-repeat: repeat-y;
+	padding: 0px 22px;
+	margin: -2px -24px;
 }
 
 /*logo样式*/
 .logo{
 	padding: 20px 0px 0px 22px;
-	width: 100px;
-	height: 100px;
+	width: 160px;
+	height: 46px;
 	
 }
 
 .logo #cpn-logo {
-	width: 100px;
-	height: 80px;
+	width: 160px;
+	height: 46px;
 }
 
 /*顶部*/
 .header{
-	margin: 20px 0px 0px 0px;
+	margin: 0px;
 }
 
 /*顶部菜单样式.*/
 .header-bar{
-	margin-top: 80px;
+	margin-top: 25px;
+	margin-bottom: 25px;
 }
 .header-bar .btn{
 	
@@ -31,13 +43,13 @@ ul, li {
 /*头像样式.*/
 .avatar{
 	padding: 20px 0px 0px 23px;
-	width: 100px;
-	height: 100px;
+	//width: 46px;
+	//height: 46px;
 }
 
 .avatar #user-avatar {
-	width: 100px;
-	height: 80px;
+	width: 46px;
+	height: 46px;
 }
 
 #myTab {
@@ -75,4 +87,42 @@ ul, li {
 }
 .project .info{
 	margin-top: 15px;
+}
+
+#main-view {
+	position: relative;
+	padding-top: 2px;
+}
+
+#sidebar {
+	position: relative;
+	min-height: 563px;
+	width: 200px;
+	margin-left: -20px;
+	padding: 50px 10px 0px 10px;
+	background: #444E5B;
+}
+
+#breadcrumb {
+	margin: 20px 0 0 0;
+	border-radius: 0;
+}
+
+#content {
+	background-color: #f5f5f5;
+}
+
+#content h2 {
+	background-color: inherit;
+}
+
+.separator {
+	height: 45px;
+	background-image: url(../img/divider.png);
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+#project-adder {
+	margin-left: 700px;
 }
