--- a/app/webroot/css/mystyle.css
+++ b/app/webroot/css/mystyle.css
@@ -1,5 +1,8 @@
 body{
 	background-color: #f5f5f5;
+	min-width: 1340px;
+	padding: 0;
+	margin: 0;
 }
 
 ul, li {
@@ -9,8 +12,12 @@ ul, li {
 #header {
 	background-image: url(../img/header_background.png);
 	background-repeat: repeat-y;
-	padding: 0px 22px;
-	margin: -2px -24px;
+	margin: -2px -22px;
+	padding: 0px 20px;
+	/*padding: 0px 22px;
+	margin: -2px -24px;*/
+	width: 100%;
+	min-width: 1310px;
 }
 
 /*logo样式*/
@@ -42,9 +49,8 @@ ul, li {
 
 /*头像样式.*/
 .avatar{
-	padding: 20px 0px 0px 23px;
-	//width: 46px;
-	//height: 46px;
+	padding: 20px 20px 0px 23px;
+	
 }
 
 .avatar #user-avatar {
@@ -110,6 +116,15 @@ ul, li {
 
 #content {
 	background-color: #f5f5f5;
+	width: 1046px;
+	min-width: 1046px;
+	margin: 0 auto;
+}
+
+#footer {
+	text-align: center;
+	width: 110px;
+	margin: 0 auto;
 }
 
 #content h2 {
@@ -125,4 +140,188 @@ ul, li {
 
 #project-adder {
 	margin-left: 700px;
+}
+
+
+/* 项目详细页面 */
+.p-single {
+	margin-left: 8px;
+	float: left;
+	width: 251px;
+	height: 116px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #333;
+}
+
+.p-status-bar {
+	float: left;
+	width: 13px;
+	height: 116px;
+	background-color: #000;
+}
+
+.p-manager {
+	float: left;
+	width: 56px;
+	height: 116px;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.p-manager .p-avatar {
+	width: 56px;
+	height: 65px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.p-manager .p-name {
+	text-align: center;
+}
+
+.p-manager .p-name span{
+	font-family: Applied Font;
+	font-size: 13px;
+	font-weight: normal;
+	font-style: normal;
+	text-decoration: none;
+	color: #333333;
+}
+
+.p-detail {
+	float: left;
+	margin-top: 18px;
+	width: 162px;
+	height: 93px;
+}
+
+.p-detail .p-summary {
+	text-align: left;
+}
+
+.p-detail .p-summary span {
+	font-family: Applied Font;
+	font-size: 13px;
+	font-weight: normal;
+	font-style: normal;
+	text-decoration: none;
+	color: #333333;
+}
+
+.p-detail .p-start {
+	text-align: left;
+}
+
+.p-detail .p-start span {
+	font-family: Applied Font;
+	font-size: 13px;
+	font-weight: bold;
+	font-style: normal;
+	text-decoration: none;
+	color: #828283;
+}
+
+.p-detail .p-end {
+	text-align: left;
+}
+
+.p-detail .p-end span {
+	font-family: Applied Font;
+	font-size: 13px;
+	font-weight: bold;
+	font-style: normal;
+	text-decoration: none;
+	color: #9FC843;
+}
+
+.p-status {
+	float: left;
+	position: relative;
+	top: -111px;
+	left: 107px;
+	width: 55px;
+	height: 116px;
+	/*background-image: url(../img/status_finished.png); */
+	/*background-position: 59px -3px;*/
+}
+
+.p-status span {
+	position: relative;
+	top: 2px;
+	left: 16px;
+	font-family: Applied Font;
+	font-size: 10px;
+	font-weight: bold;
+	font-style: normal;
+	text-decoration: none;
+	color: #FFFFFF;
+}
+
+
+
+/* 用户详细页面 */
+#u-projects-form {
+	border-style: solid;
+	border-width: 1px;
+	border-color: #333;
+	padding-left: 35px;
+	margin-top: 10px;
+	width: 1013px;
+}
+
+.u-single {
+	float: left;
+	width: 199px;
+	height: 146px;
+	padding-left: 8px;
+	padding-right: 8px;
+	padding-top: 10px;
+	margin-right: 35px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #333;
+}
+
+.u-single p{
+	text-align: left;
+	margin-bottom: 2px;
+}
+
+.u-single p span {
+	font-family: Applied Font;
+	font-size: 13px;
+	font-weight: normal;
+	font-style: normal;
+	text-decoration: none;
+	color: #333333;
+}
+
+.u-single .u-priority {
+	float: right;
+	font-family: Applied Font;
+	font-size: 13px;
+	font-weight: bold;
+	font-style: normal;
+	text-decoration: none;
+	color: #FF0000;
+}
+
+.u-single .u-progress {
+	width: 200px;
+	height: 21px;
+}
+
+.u-single .u-status {
+	height: 27px;
+	width: 66px;
+	margin: 0 auto;
+}
+
+.u-single .u-status img {
+	height: 27px;
 }
