--- a/app/webroot/css/bootstrap.css
+++ b/app/webroot/css/bootstrap.css
@@ -5328,7 +5328,7 @@ input[type="submit"].btn.btn-mini {
   color: #ffffff;
   text-align: center;
   text-decoration: none;
-  background-color: #000000;
+  background-color: #8c8c8c;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
@@ -5346,7 +5346,7 @@ input[type="submit"].btn.btn-mini {
   bottom: 0;
   left: 50%;
   margin-left: -5px;
-  border-top-color: #000000;
+  border-top-color: #8c8c8c;
   border-width: 5px 5px 0;
 }
 
@@ -5354,7 +5354,7 @@ input[type="submit"].btn.btn-mini {
   top: 50%;
   left: 0;
   margin-top: -5px;
-  border-right-color: #000000;
+  border-right-color: #8c8c8c;
   border-width: 5px 5px 5px 0;
 }
 
@@ -5362,7 +5362,7 @@ input[type="submit"].btn.btn-mini {
   top: 50%;
   right: 0;
   margin-top: -5px;
-  border-left-color: #000000;
+  border-left-color: #8c8c8c;
   border-width: 5px 0 5px 5px;
 }
 
@@ -5370,7 +5370,7 @@ input[type="submit"].btn.btn-mini {
   top: 0;
   left: 50%;
   margin-left: -5px;
-  border-bottom-color: #000000;
+  border-bottom-color: #8c8c8c;
   border-width: 0 5px 5px;
 }
 
