--- a/app/webroot/css/mystyle.css
+++ b/app/webroot/css/mystyle.css
@@ -1,4 +1,6 @@
+/****************************************************** 全局样式 ***********************************************************/
 body{
+	font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	background-color: #f5f5f5;
 	min-width: 1340px;
 	padding: 0;
@@ -9,24 +11,47 @@ ul, li {
 	margin: 0px;
 }
 
+
+/****************************************************** 顶部栏样式 **********************************************************/
 #header {
-	background-image: url(../img/header_background.png);
-	background-repeat: repeat-y;
-	margin: -2px -22px;
-	padding: 0px 20px;
-	/*padding: 0px 22px;
-	margin: -2px -24px;*/
+	background-color: #2d2d2d;
+	margin: 0 0 0 -20px;
+	padding: 0 20px;
 	width: 100%;
 	min-width: 1310px;
 }
 
+/* 左侧logo样式 */
+#header .logo{
+	margin: 5px 0px 5px 10px;
+	width: 160px;
+	height: 46px;	
+}
+
+#header .logo #cpn-logo {
+	width: 160px;
+	height: 46px;
+}
+
+/* 顶部菜单样式. */
+.header-bar{
+	margin-top: 15px;
+}
+
+/* 头像名字显示区样式. */
+#header .avatar{
+	margin-top: 13px;
+	margin-left: 50px;
+}
+
 #header .avatar #user-avatar {
-	width: 46px; 
+	width: 20px;
+	height: 20px;
 	display: inline-block;
 }
 
 #header .avatar #user-name {
-	margin-left: 20px; 
+	margin-left: 10px; 
 	display: inline-block;
 }
 
@@ -42,98 +67,40 @@ ul, li {
 	left: 1px;
 }
 
-/*logo样式*/
-.logo{
-	padding: 20px 0px 0px 22px;
-	width: 160px;
-	height: 46px;	
+
+
+/****************************************************** 主内容区样式 ********************************************************/
+
+/** 侧边栏 **/
+#sidebar {
+	position: relative;
+	min-height: 561px;
+	width: 200px;
+	margin-left: -20px;
+	padding: 50px 10px 0px 10px;
+	background: #2d2d2d;
 }
 
-.logo #cpn-logo {
-	width: 160px;
-	height: 46px;
-}
-
-/*顶部*/
-.header{
-	margin: 0px;
-}
-
-/*顶部菜单样式.*/
-.header-bar{
-	margin-top: 25px;
-	margin-bottom: 25px;
-}
-
-/*头像样式.*/
-.avatar{
-	padding: 15px 20px 0px 23px;	
-}
-
-.avatar #user-avatar {
-	width: 46px;
-	height: 46px;
-}
-
-#myTab {
+#sidebar #myTab {
 	text-align:center;
 }
 
-#myTab a {
+#sidebar #myTab a {
 	color: #fff;
 }
 
-#myTab a:hover {
+#sidebar #myTab a:hover {
 	color: #0088cc;
 }
 
-#myTab .icon-chevron-right { /*箭头的样式.*/
+#sidebar #myTab .icon-chevron-right {
   	float: right;
 	margin-top: 2px;
   	margin-right: -6px;
   	opacity: .25;
 }
 
-.test{
-	color: #ffffff;
-	cursor: default;
-	background-color: #0088cc;
-	border: 1px solid #ddd;
-	border-bottom-color: transparent;
-}
-
-
-/*项目管理缩略图样式.*/
-.project{
-	padding: 10px 10px 20px 20px;
-}
-.project:hover{
-	border-color: #0088cc;
-	box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
-}
-.project .img-polaroid{
-	padding: 2px;
-	margin-top: 10px;
-	border-radius: 2px 2px 2px 2px;
-}
-.project .info{
-	margin-top: 15px;
-}
-
-#main-view {
-	position: relative;
-	padding-top: 2px;
-}
-
-#sidebar {
-	position: relative;
-	min-height: 563px;
-	width: 200px;
-	margin-left: -20px;
-	padding: 50px 10px 0px 10px;
-	background: #444E5B;
-}
-
+/** 面包屑导航 **/
 #breadcrumb {
 	margin: 20px 0 0 0;
 	border-radius: 0;
@@ -146,34 +113,9 @@ ul, li {
 	left: 1px;
 }
 
-#content {
-	font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	background-color: #f5f5f5;
-	width: 1046px;
-	min-width: 1046px;
-	margin: 0 auto;
-}
-
-#footer {
-	text-align: center;
-	width: 110px;
-	margin: 0 auto;
-}
-
-#content h2 {
-	background-color: inherit;
-}
-
-.separator {
-	height: 45px;
-	background-image: url(../img/divider.png);
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
 #project-adder {
 	position: absolute;
-	top: 30px;
+	top: 84px;
 	right: 50px;
 }
 
@@ -184,8 +126,28 @@ ul, li {
 	left: 1px;
 }
 
+/** 内容 **/
+#content {
+	background-color: #f5f5f5;
+	width: 1046px;
+	min-width: 1046px;
+	margin: 0 auto;
+}
 
-/* 项目详细页面 */
+#content h1, h2, h4, h5, h6 {
+	background-color: #f5f5f5;
+}
+
+/** 底部栏 **/
+#footer {
+	text-align: center;
+	width: 110px;
+	margin: 0 auto;
+}
+
+
+
+/****************************************************** 项目详细页面样式 ****************************************************/
 .p-single {
 	margin-left: 8px;
 	float: left;
@@ -230,7 +192,6 @@ ul, li {
 }
 
 .p-manager .p-name span{
-	font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 13px;
 	font-weight: normal;
 	font-style: normal;
@@ -250,7 +211,6 @@ ul, li {
 }
 
 .p-detail .p-summary span {
-	font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 13px;
 	font-weight: normal;
 	font-style: normal;
@@ -263,7 +223,6 @@ ul, li {
 }
 
 .p-detail .p-start span {
-	font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;;
 	font-size: 13px;
 	font-weight: bold;
 	font-style: normal;
@@ -276,7 +235,6 @@ ul, li {
 }
 
 .p-detail .p-end span {
-	font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;;
 	font-size: 13px;
 	font-weight: bold;
 	font-style: normal;
@@ -299,7 +257,6 @@ ul, li {
 	position: relative;
 	top: 2px;
 	left: 16px;
-	font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;;
 	font-size: 10px;
 	font-weight: bold;
 	font-style: normal;
@@ -309,11 +266,9 @@ ul, li {
 
 
 
-/* 用户详细页面 */
-.user-view {
-	font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
 
+
+/**************************************************** 用户详细页面样式 ******************************************************/
 #u-projects-form {
 	border-style: solid;
 	border-width: 1px;
@@ -344,7 +299,6 @@ ul, li {
 }
 
 .u-single p span {
-	font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 13px;
 	font-weight: normal;
 	font-style: normal;
@@ -354,7 +308,6 @@ ul, li {
 
 .u-single .u-priority {
 	float: right;
-	font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 13px;
 	font-weight: bold;
 	font-style: normal;
@@ -378,7 +331,7 @@ ul, li {
 }
 
 
-/*  创建成功页面  */
+/****************************************************** 创建成功页面样式 *****************************************************/
 .create-info {
 	background-color: #f5f5f5;
 }
