--- a/app/webroot/css/mystyle.css
+++ b/app/webroot/css/mystyle.css
@@ -201,6 +201,10 @@ ul, li {
 }
 
 /****************************************************** 项目详细页面样式 ****************************************************/
+.project-view form {
+	margin:0; width: 100%;
+}
+
 .stage-separator {
 	height: 45px;
 	background-image: url(../img/divider.png);
@@ -218,6 +222,7 @@ ul, li {
 	border-style: solid;
 	border-width: 1px;
 	border-color: #ccc;	
+	cursor: pointer;
 }
 
 .p-single:hover	{
@@ -336,8 +341,11 @@ ul, li {
 	color: #FFFFFF;
 }
 
-
-
+#deleteProject {
+	top: 35%;
+	left: 65%;
+	width: 200px;
+}
 
 
 /**************************************************** 用户详细页面样式 ******************************************************/
