--- a/app/webroot/css/mystyle.css
+++ b/app/webroot/css/mystyle.css
@@ -205,6 +205,13 @@ ul, li {
 	margin:0; width: 100%;
 }
 
+.p-stage a:hover {
+	text-decoration: none;
+	position: relative;
+	top: 1px;
+	left: 1px;
+}
+
 .stage-separator {
 	height: 45px;
 	background-image: url(../img/divider.png);
@@ -234,7 +241,6 @@ ul, li {
 	-moz-box-shadow: 0 2px 4px rgba(0, 105, 214, 0.25);
 	box-shadow: 0 2px 4px rgba(0, 105, 214, 0.25);
 }
-
 
 .p-status-bar {
 	float: left;
